<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.CardEditActivity">

    <EditText
        android:id="@+id/cardNameTextField_EditCardActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/expDateTextField_EditCardActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/expirationdate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/cardNumberTextField_EditCardActivity"
        app:layout_constraintStart_toStartOf="@+id/cardNumberTextField_EditCardActivity"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberTextField_EditCardActivity" />

    <Button
        android:id="@+id/saveButton_EditCardActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/expDateTextField_EditCardActivity"
        app:layout_constraintStart_toStartOf="@+id/expDateTextField_EditCardActivity"
        app:layout_constraintTop_toBottomOf="@+id/expDateTextField_EditCardActivity" />

    <EditText
        android:id="@+id/cardNumberTextField_EditCardActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/cardnumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/cardNameTextField_EditCardActivity"
        app:layout_constraintStart_toStartOf="@+id/cardNameTextField_EditCardActivity"
        app:layout_constraintTop_toBottomOf="@+id/cardNameTextField_EditCardActivity" />
</androidx.constraintlayout.widget.ConstraintLayout>